# L10nXcstrings

./: .gitignore  L10nXcstrings.py  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: new_release.yml  python-tests.yml
l10n_xcstrings/: __init__.py  cli.py  codegen.py  format.py  identifiers.py  swift.py  swift_lexer.py  usage_scan.py  xcstrings.py
test/: test_cli.py
tests/: test_edge_cases.py  test_extract.py  test_generate.py  test_l10n.py
tests/fixtures/: Localizable.xcstrings
