[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l10n_xcstrings"
version = "0.0.6"
description = "Generate Swift localization helpers from .xcstrings"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Serhiy Zabolotnyy" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/Disconnecter/L10nXcstrings"
Repository = "https://github.com/Disconnecter/L10nXcstrings"

[project.scripts]
l10n-xcstrings = "l10n_xcstrings.cli:main"

[project.optional-dependencies]
dev = [
  "build",
  "ruff",
]

[tool.setuptools]
py-modules = ["L10nXcstrings"]
packages = ["l10n_xcstrings"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
